--- a/templates/sheets/magie-sheet.html
+++ b/templates/sheets/magie-sheet.html
@@ -7,10 +7,10 @@
             <div class="grid-2col">
                 <h1><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
                 <label>Classe
-                <input name="data.classe" type="text" value="{{data.data.classe}}" placeholder="classe"/>
+                <input name="system.classe" type="text" value="{{data.system.classe}}" placeholder="classe"/>
             </label>
                 <h2>Description</h2>
-                <textarea name="data.description" style="min-height: 80px">{{data.data.description}}</textarea>
+                <textarea name="system.description" style="min-height: 80px">{{data.system.description}}</textarea>
             </div>
         </div>
     </div>
