--- a/templates/sheets/personnage-sheet.html
+++ b/templates/sheets/personnage-sheet.html
@@ -24,6 +24,7 @@
 
 		<div class="separator"></div>
 		<div class="flexrow">
+			<button class="jetdedes">Lancer</button>
 			<div class="grid-5col" style="min-width: 150px;">
 				PV <input class="hp" name="system.PV.value" type="text" value="{{actor.system.PV.value}}" placeholder="1" style="width: 40px;"/> /
 				<input class="hpmax" name="system.PV.max" type="text" value="{{actor.system.PV.max}}" placeholder="1" style="width: 40px;"/>
