--- a/css/jdrjr.css
+++ b/css/jdrjr.css
@@ -35,3 +35,4 @@ h1,h2{font-family: 'MedievalSharp', cursive;}
 .jr .col4 p{line-height: 8px;}
 .jr .col2 h2{background: #c15f6c; padding: 5px; width: 200px;margin: 5px}
 .jr .col2 li{width: 146px;float: left;padding: 5px}
+.jr .jetdedes{cursor: pointer;}
